--- a/Sengine/Sengine.vcxproj.filters
+++ b/Sengine/Sengine.vcxproj.filters
@@ -34,6 +34,8 @@
     <ClInclude Include="src\Sengine\Log.h">
       <Filter>Sengine</Filter>
     </ClInclude>
+    <ClInclude Include="sepch.h" />
+    <ClInclude Include="src\sepch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Sengine\Application.cpp">
@@ -42,5 +44,7 @@
     <ClCompile Include="src\Sengine\Log.cpp">
       <Filter>Sengine</Filter>
     </ClCompile>
+    <ClCompile Include="sepch.cpp" />
+    <ClCompile Include="src\sepch.cpp" />
   </ItemGroup>
 </Project>
