--- a/Sengine/Sengine.vcxproj
+++ b/Sengine/Sengine.vcxproj
@@ -143,6 +143,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="sepch.h" />
     <ClInclude Include="src\Sengine.h" />
     <ClInclude Include="src\Sengine\Application.h" />
     <ClInclude Include="src\Sengine\Core.h" />
@@ -152,10 +153,16 @@
     <ClInclude Include="src\Sengine\Events\KeyEvent.h" />
     <ClInclude Include="src\Sengine\Events\MouseEvent.h" />
     <ClInclude Include="src\Sengine\Log.h" />
+    <ClInclude Include="src\sepch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="sepch.cpp" />
     <ClCompile Include="src\Sengine\Application.cpp" />
     <ClCompile Include="src\Sengine\Log.cpp" />
+    <ClCompile Include="src\sepch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">sepch.h</PrecompiledHeaderFile>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
